[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ftl2-ai-runner"
version = "0.1.0"
description = "Run markdown desired-state files as AWX job templates via ftl2-ai-loop"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
authors = [
    { name = "Ben" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "ftl2-runner @ git+https://github.com/benthomasson/ftl2-runner",
    "ftl2-ai-loop @ git+https://github.com/benthomasson/ftl2-ai-loop",
]

[project.scripts]
ftl2-ai-runner = "ftl2_ai_runner.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ftl2_ai_runner"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
